datasets/dataset_txt/requests/requests_2108.txt
amckinlay commented on May 25, 2013
With Python 3.3 on Windows 8 I get the follow error when installing Requests:
Downloading/unpacking requests
  Running setup.py egg_info for package requests

Installing collected packages: requests
  Running setup.py install for requests

      File "C:\Users\***\Documents\***\Lib\site-packages\requests\packages\urllib3\contrib\ntlmpool.py", line 38
        """
         ^
    SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 130-132: truncated \uXXXX escape

Successfully installed requests
Cleaning up...